한번에 20개씩 이미지 페이징 처리

--- a/XrayTEXT/MainWin.xaml
+++ b/XrayTEXT/MainWin.xaml
@@ -41,7 +41,7 @@
             <Setter Property="Height" Value="10"></Setter>-->
             <!--<Setter Property="Width" Value="{Binding ModelTextbox.TxWidth}" />
             <Setter Property="Height" Value="{Binding ModelTextbox.TxHeight}" />-->
-            
+
         </Style>
 
         <!-- Photo Template -->
@@ -128,22 +128,23 @@
                 </MenuItem>
             </Menu>
 
-        <Grid Margin="0" Grid.Row="1">
-            <Grid.RowDefinitions>
-                <RowDefinition Height="5" />
-                <RowDefinition Height="*" />
-                <RowDefinition Height="40" />
-            </Grid.RowDefinitions>
-            <Grid.ColumnDefinitions>
-                <ColumnDefinition Width="200"></ColumnDefinition>
-                <ColumnDefinition></ColumnDefinition>
-                <ColumnDefinition Width="200"></ColumnDefinition>
-            </Grid.ColumnDefinitions>
+            <Grid Margin="0" Grid.Row="1">
+                <Grid.RowDefinitions>
+                    <RowDefinition Height="5" />
+                    <RowDefinition Height="*" />
+                    <RowDefinition Height="40" />
+                </Grid.RowDefinitions>
+                <Grid.ColumnDefinitions>
+                    <ColumnDefinition Width="200"></ColumnDefinition>
+                    <ColumnDefinition></ColumnDefinition>
+                    <ColumnDefinition Width="200"></ColumnDefinition>
+                </Grid.ColumnDefinitions>
 
-            <!--썸네일-->
+                <!--썸네일-->
                 <GroupBox Grid.Column="0" Grid.Row="1" Width="200">
                     <TabControl x:Name="tabLeft" Grid.Row="1" Grid.Column="0">
                         <TabItem Header="썸네일">
+
                             <ScrollViewer VerticalScrollBarVisibility="Visible" HorizontalScrollBarVisibility="Disabled" Width="180">
                                 <ListBox DataContext="{Binding Source={StaticResource Photos}}"
                                     IsSynchronizedWithCurrentItem="True"
@@ -158,69 +159,76 @@
                                     </StackPanel>-->
                                     <!--<ListBox.ContextMenu>
                                         <ContextMenu>
-                                            --><!--<MenuItem Header="삭제" Click="deletePhoto"/>--><!--
+                                            -->
+                                    <!--<MenuItem Header="삭제" Click="deletePhoto"/>-->
+                                    <!--
                                         </ContextMenu>
                                     </ListBox.ContextMenu>-->
                                 </ListBox>
                             </ScrollViewer>
-                        </TabItem>
 
+                        </TabItem>
                         <TabItem Header="탐색기">
+
                             <TreeView x:Name="LeftTree" Margin="8,0,8,16" Foreground="#FFFFFFFF" ItemsSource="{Binding MyThingyCollection}"
-                                      TreeViewItem.Selected="TreeViewItem_OnItemSelected">
+                                    TreeViewItem.Selected="TreeViewItem_OnItemSelected">
                                 <TreeView.Background>
                                     <LinearGradientBrush EndPoint="0.5,1" StartPoint="0.5,0">
                                         <!--<GradientStop Color="#FFFFFFFF" Offset="1"/>
-                                    <GradientStop Color="#FF630404" Offset="0"/>-->
+                                <GradientStop Color="#FF630404" Offset="0"/>-->
                                     </LinearGradientBrush>
                                 </TreeView.Background>
                             </TreeView>
+
                         </TabItem>
                     </TabControl>
                 </GroupBox>
 
                 <!-- Zoom Control -->
-            <DockPanel DockPanel.Dock="Bottom" Margin="5" Grid.Column="0" Grid.Row="2">
-                <Label DockPanel.Dock="Left" FontSize="12">Zoom:</Label>
-                <Slider Name="ZoomSlider" 
-                Margin="10,0,0,0" 
-          Orientation="Horizontal" 
-          Minimum="80" 
-          Maximum="180" 
-          Value="120" 
-          TickFrequency="80"
-          TickPlacement="BottomRight" 
-          SmallChange="5"
-          LargeChange="20" Width="110" FontSize="12" />
-            </DockPanel>
+                <DockPanel DockPanel.Dock="Bottom" Margin="5" Grid.Column="0" Grid.Row="2">
 
-            <!--X-ray-->
-            <TabControl x:Name="tabControl" Grid.Row="1" Grid.Column="1">
-                <TabItem Header="X-Ray">
+                    <Label DockPanel.Dock="Left" FontSize="12">Zoom:</Label>
+                    <Slider Name="ZoomSlider" 
+                    Margin="10,0,0,0" 
+                    Orientation="Horizontal" 
+                    Minimum="80" 
+                    Maximum="180" 
+                    Value="120" 
+                    TickFrequency="80"
+                    TickPlacement="BottomRight" 
+                    SmallChange="5"
+                    LargeChange="20" Width="110" FontSize="12" />
+
+                </DockPanel>
+
+                <!--X-ray-->
+                <TabControl x:Name="tabControl" Grid.Row="1" Grid.Column="1">
+                    <TabItem Header="X-Ray">
                         <Border BorderThickness="0" MaxWidth="4892" MaxHeight="4020" >
-                        <ScrollViewer Margin="0,0,0,0" HorizontalAlignment="Center" VerticalAlignment="Center"
+                            <ScrollViewer Margin="0,0,0,0" HorizontalAlignment="Center" VerticalAlignment="Center"
                         ScrollViewer.HorizontalScrollBarVisibility="Visible" ScrollViewer.VerticalScrollBarVisibility="Visible"
                         x:Name="ImageScrollViewer" >
-                            <Grid x:Name="root" Background="White" >
+                                <Grid x:Name="root" Background="White" >
                                     <Canvas Name="Xcanvas" Width="1500" Height="900" >
                                         <Image Name="ViewedPhoto" Width="1500" Height="900" Margin="1" Stretch="UniformToFill" 
-                                               ><!--Loaded="ViewedPhoto_OnLoaded"-->
+                                               >
+                                            <!--Loaded="ViewedPhoto_OnLoaded"-->
                                             <Image.RenderTransform>
-                                            <ScaleTransform x:Name="Zoom" ScaleX="1" ScaleY="1">
-                                                
-                                            </ScaleTransform>
-                                        </Image.RenderTransform>
-                                    </Image>
-                                </Canvas>
-                                <!--<TextBlock x:Name="tbPosition" Text="마우스 좌표 : [0.0]" Margin="10" />-->
-                            </Grid>
-                        </ScrollViewer>
-                    </Border>
-                </TabItem>
-            </TabControl>
+                                                <ScaleTransform x:Name="Zoom" ScaleX="1" ScaleY="1">
 
-            <!-- 의사 소견 -->
-            <DockPanel DockPanel.Dock="Bottom" Margin="5" Grid.Column="2" Grid.Row="1">
+                                                </ScaleTransform>
+                                            </Image.RenderTransform>
+                                        </Image>
+                                    </Canvas>
+                                    <!--<TextBlock x:Name="tbPosition" Text="마우스 좌표 : [0.0]" Margin="10" />-->
+                                </Grid>
+                            </ScrollViewer>
+                        </Border>
+                    </TabItem>
+                </TabControl>
+
+                <!-- 의사 소견 -->
+                <DockPanel DockPanel.Dock="Bottom" Margin="5" Grid.Column="2" Grid.Row="1">
                     <Grid Margin="0">
                         <Grid.RowDefinitions>
                             <RowDefinition Height="22" />
@@ -232,7 +240,7 @@
                         <Grid.ColumnDefinitions>
                             <ColumnDefinition Width="*"></ColumnDefinition>
                         </Grid.ColumnDefinitions>
-                        
+
                         <Label Name="LblcutMemo" Grid.Column="0" Grid.Row="1">소견</Label>
 
                         <!-- 컷팅 메모 -->
@@ -242,6 +250,7 @@
                          VerticalAlignment="Top"
                          ScrollViewer.HorizontalScrollBarVisibility="Auto"
                          ScrollViewer.VerticalScrollBarVisibility="Auto"
+                                 IsReadOnly="True"
                          >
                         </TextBox>
                         <Label Name="LblFileTitle" Grid.Column="0" Grid.Row="3">설명</Label>
@@ -257,9 +266,9 @@
                         >
                         </TextBox>
                     </Grid>
-                
-            <!-- 사진 파일 설명 -->
-                <!--Text="{Binding UserFileMemo, UpdateSourceTrigger=PropertyChanged}"-->
+
+                    <!-- 사진 파일 설명 -->
+                    <!--Text="{Binding UserFileMemo, UpdateSourceTrigger=PropertyChanged}"-->
 
                     <TextBox Name="TxtServerTime" x:FieldModifier="public"
 	                    Width="80" Height="20" Margin="-190,-30" 
@@ -268,7 +277,7 @@
 	                    ScrollViewer.HorizontalScrollBarVisibility="Auto"
 	                    ScrollViewer.VerticalScrollBarVisibility="Auto"
 	                    ></TextBox>
-                
+
                     <TextBox Name="TxtLayUICnt" x:FieldModifier="public"
 	                    Width="40" Height="20" Margin="-100,-30" 
 	                    VerticalAlignment="Bottom"
@@ -293,11 +302,25 @@ Click="GetTalkBoxEnable"
 HorizontalAlignment="Left"
 Margin="285,0,0,0"
 >체크</Button>-->
-                <DockPanel DockPanel.Dock="Bottom" Margin="5" Width="500" Grid.Row="2" Grid.Column="1" HorizontalAlignment="Left">
+                <DockPanel DockPanel.Dock="Bottom" Margin="5" Width="280" Grid.Row="2" Grid.Column="1" HorizontalAlignment="Left">
+
+                    <Label DockPanel.Dock="Left" FontSize="12">총파일수</Label>
+                    <TextBox Name="TxtTotalFileCnt" x:FieldModifier="public"
+	                    Width="50" Height="20" Margin="0,0" Text="0" IsReadOnly="True"></TextBox>
+
+                    <Label DockPanel.Dock="Left" FontSize="12">페이지</Label>
+                    <TextBox Name="TxtCurPage" x:FieldModifier="public" 
+	                    Width="30" Height="20" Margin="0,5" Text="1" 
+                             PreviewTextInput="tb_OnlyNum_KeyPress"
+                             ></TextBox>
+                    <Button Margin="0,5" Width="80" Click="OnPageChangeClick" HorizontalAlignment="Right">페이지이동</Button>
+                </DockPanel>
+                <DockPanel DockPanel.Dock="Bottom" Margin="5" Width="500" Grid.Row="2" Grid.Column="1" HorizontalAlignment="Right">
+
                     <!-- 이미지경로 -->
-                    <TextBox Name="ImagesDir" Margin="0,0,0,0" Width="400" Text="D:\DEV\WPF\PRJ\XrayTEXT\XrayTEXT\Images"  HorizontalAlignment="Right" />
+                    <TextBox Name="ImagesDir" Margin="0,5,0,5" Width="400" Text="D:\DEV\WPF\PRJ\XrayTEXT\XrayTEXT\Images"  HorizontalAlignment="Right" />
                     <!-- 이미지경로 변경 버튼 -->
-                    <Button Margin="20,0,0,0" Width="80" Click="OnImagesDirChangeClick" HorizontalAlignment="Right">폴더변경</Button>
+                    <Button Margin="20,5,0,5" Width="74" Click="OnImagesDirChangeClick" HorizontalAlignment="Right">폴더변경</Button>
                 </DockPanel>
 
                 <!--<DockPanel DockPanel.Dock="Bottom" Margin="5" Grid.Row="2" Grid.Column="1" HorizontalAlignment="Right">
@@ -309,5 +332,5 @@ Margin="285,0,0,0"
         </Grid>
     </DockPanel>
 
-    
+
 </Window>
