--- a/XrayTEXT/MainWin.xaml
+++ b/XrayTEXT/MainWin.xaml
@@ -198,21 +198,17 @@
                     TickPlacement="BottomRight" 
                     SmallChange="5"
                     LargeChange="20" Width="110" FontSize="12" />
-
                 </DockPanel>
 
                 <!--X-ray-->
                 <TabControl x:Name="tabControl" Grid.Row="1" Grid.Column="1">
                     <TabItem Header="X-Ray">
                         <Border BorderThickness="0" MaxWidth="4892" MaxHeight="4020" >
-                            <ScrollViewer Margin="0,0,0,0" HorizontalAlignment="Center" VerticalAlignment="Center"
-                        ScrollViewer.HorizontalScrollBarVisibility="Visible" ScrollViewer.VerticalScrollBarVisibility="Visible"
-                        x:Name="ImageScrollViewer" >
+                            <ScrollViewer x:Name="ImageScrollViewer" Margin="0,0,0,0"
+                                ScrollViewer.HorizontalScrollBarVisibility="Visible" ScrollViewer.VerticalScrollBarVisibility="Visible" >
                                 <Grid x:Name="root" Background="White" >
-                                    <Canvas Name="Xcanvas" Width="1500" Height="900" >
-                                        <Image Name="ViewedPhoto" Width="1500" Height="900" Margin="1" Stretch="UniformToFill" 
-                                               >
-                                            <!--Loaded="ViewedPhoto_OnLoaded"-->
+                                    <Canvas Name="Xcanvas" MinWidth="1500" MinHeight="900" > <!-- VerticalAlignment="Center" HorizontalAlignment="Center" -->
+                                            <Image Name="ViewedPhoto" Width="1500" Height="900" Margin="0" Stretch="UniformToFill" >
                                             <Image.RenderTransform>
                                                 <ScaleTransform x:Name="Zoom" ScaleX="1" ScaleY="1">
 
